--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.5",
+    "antd": "^5.24.1",
     "chart.js": "^4.4.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
